Added GOOGLE_BUILDABLE for maven execution

--- a/example-java-app/cloudbuild.yaml
+++ b/example-java-app/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
 - name: 'gcr.io/k8s-skaffold/pack'
   entrypoint: 'pack'
-  args: ['build', '--builder=gcr.io/buildpacks/builder', '--publish', 'gcr.io/$PROJECT_ID/hello-app-java:$COMMIT_SHA']
+  args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', '--publish', 'gcr.io/$PROJECT_ID/hello-app-java:$COMMIT_SHA']
   dir: example-java-app
+  env:
+  - 'GOOGLE_BUILDABLE=example-java-app'
