--- a/example-java-app/cloudbuild.yaml
+++ b/example-java-app/cloudbuild.yaml
@@ -1,5 +1,6 @@
 steps:
 - name: 'gcr.io/k8s-skaffold/pack'
   entrypoint: 'pack'
-  args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', '--publish', 'gcr.io/$PROJECT_ID/hello-app-java:$COMMIT_SHA']
+  args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose']
   dir: example-java-app
+images: ["gcr.io/$PROJECT_ID/example-app-java"]
