--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,8 +24,7 @@ steps:
   entrypoint: 'pack'
   args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', 'gcr.io/$PROJECT_ID/example-python-app']
   dir: example-python-app
-images: 
-	[ 
+images: [ 
 	  "gcr.io/$PROJECT_ID/example-app-java", 
 	  "gcr.io/$PROJECT_ID/example-go-app",
 	  "gcr.io/$PROJECT_ID/example-dotnet-core-app",
