--- a/example-java-app/cloudbuild.yaml
+++ b/example-java-app/cloudbuild.yaml
@@ -1,6 +1,15 @@
 steps:
+# test using mvaven
+- name: maven:3-jdk-8
+  entrypoint: mvn
+  args: ["test"]
+# build using Buildpacks
 - name: 'gcr.io/k8s-skaffold/pack'
   entrypoint: 'pack'
-  args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', 'gcr.io/$PROJECT_ID/example-app-java']
-  dir: example-java-app
-images: ["gcr.io/$PROJECT_ID/example-app-java"]
+  args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', 'gcr.io/$PROJECT_ID/example-java-app']
+# push the image to GCR
+images: ["gcr.io/$PROJECT_ID/example-java-app"]
+# Deploy container image to Cloud Run
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args: ['run', 'deploy', 'example-java-app', '--image', 'gcr.io/$PROJECT_ID/example-java-app', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
