Fixed cloudbuild.yaml to deploy to CloudRun

--- a/example-java-app/cloudbuild.yaml
+++ b/example-java-app/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-# test using mvaven
+# test using maven
 - name: maven:3-jdk-8
   entrypoint: mvn
   args: ["test"]
@@ -7,9 +7,12 @@ steps:
 - name: 'gcr.io/k8s-skaffold/pack'
   entrypoint: 'pack'
   args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', 'gcr.io/$PROJECT_ID/example-java-app']
-# push the image to GCR
-images: ["gcr.io/$PROJECT_ID/example-java-app"]
+# Push the container image to Container Registry
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['push', 'gcr.io/$PROJECT_ID/example-java-app']
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
   args: ['run', 'deploy', 'example-java-app', '--image', 'gcr.io/$PROJECT_ID/example-java-app', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated']
+# push the image to GCR
+images: ["gcr.io/$PROJECT_ID/example-java-app"]
