--- a/example-java-app/cloudbuild.yaml
+++ b/example-java-app/cloudbuild.yaml
@@ -8,7 +8,11 @@ steps:
 # build using Buildpacks
 - name: 'gcr.io/k8s-skaffold/pack'
   entrypoint: 'pack'
-  args: ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', 'gcr.io/$PROJECT_ID/example-java-app']
+  args: # ['build', '--builder=gcr.io/buildpacks/builder', '--verbose', 'gcr.io/$PROJECT_ID/example-java-app']
+  - 'build'
+  - '--builder=gcr.io/buildpacks/builder'
+  - '--verbose'
+  - 'gcr.io/$PROJECT_ID/example-java-app'
 # when using the repo trigger specify the directory
   dir: /workspace/example-java-app  
 # Push the container image to Container Registry
